# hmmm

./: .gitignore  Cargo.toml  README.md  accounts.txt  package.json  pnpm-lock.yaml
apps/data/: package.json
apps/data/prisma/: schema.prisma
apps/data/prisma/migrations/20240918194107_/: migration.sql
apps/frontend/: components.json  package.json  pnpm-lock.yaml
apps/frontend/src/: app.css  app.html
apps/frontend/src-tauri/: tauri.conf.json
apps/frontend/src/lib/: auth.ts  client.ts  tauri.ts  utils.ts
apps/frontend/src/lib/components/game/: actionable.ts  car.ts  controllable.ts  game.svelte  game.tiled-session  person.ts  player-controller.ts  road.tmx  test.tmx  tiles.json  tiles.tsx  updatable.ts  utils.ts
apps/frontend/src/lib/pages/: login.svelte
apps/frontend/src/routes/: +layout.svelte  +page.svelte
apps/frontend/src/routes/login/: +page.svelte
apps/frontend/src/routes/refresh-token/: +server.ts
apps/frontend/src/routes/save-login/: +server.ts
apps/frontend/static/assets/: idle.tsj  map.json
apps/frontend/static/assets/person/: Read Me.txt
apps/rusty/: Cargo.toml  bindings.ts  package.json
apps/rusty/src/: error.rs  lib.rs
apps/rusty/src/bins/: game.rs  server.rs
apps/rusty/src/game/: action.rs  mod.rs
apps/rusty/src/gangsta/: action.rs  map.rs  mod.rs  traffic_light.rs  vehicle.rs
apps/rusty/src/http/controllers/: authentication.rs  lobby.rs
apps/rusty/src/http/routers/: authentication.rs  lobby.rs  mod.rs
apps/rusty/src/lobby/: lobby.rs  manager.rs
apps/rusty/src/services/: jwt.rs
(+1 files in other folders)
